# caboodle

./: .gitignore  .travis.yml  LICENSE  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.py
caboodle/: artifacts.py  artifacts_test.py  coffer.py  coffer_test.py  gcs.py  workflow_test.py
docs/: sphinx-requirements.txt
docs/source/: conf.py  index.rst
