[tool.poetry]
name = "the-whole-caboodle"
version = "0.2.16"
description = "Utilities for artifact management for data science in the cloud."
authors = ["Saad Khan <skhan8@mail.einstein.yu.edu>"]
packages = [
    { include = "caboodle" }
]
exclude = ["*_test.py"]

[tool.poetry.dependencies]
python = "^3.6"
google-cloud-storage = "^1.25"
tqdm = "^4.41.1"
gcloud-aio-storage = "^5.4.0"
aiofiles = "^0.5.0"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.extras]
fireworks-ml = ["^0.3.7"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"